Make parser Java 8 compatible